[gd_scene load_steps=22 format=3 uid="uid://darbo0x41j3wt"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_evtrr"]
[ext_resource type="Script" path="res://panels/VirtualFixtures/VirtualFixtures.gd" id="2_2fnn8"]
[ext_resource type="Script" path="res://panels/VirtualFixtures/FixtureContainer.gd" id="3_7v2kg"]
[ext_resource type="Shader" path="res://assets/shaders/Grid.gdshader" id="4_usc8a"]
[ext_resource type="StyleBox" uid="uid://csle20exwqtti" path="res://assets/PanelMenuBar.tres" id="5_11uun"]
[ext_resource type="Texture2D" uid="uid://ds5mmj3a0ukl4" path="res://assets/icons/FixtureGroup.svg" id="6_n07cw"]
[ext_resource type="Texture2D" uid="uid://bt7w4l5chxmnr" path="res://assets/icons/ZoomIn.svg" id="7_llnj3"]
[ext_resource type="Texture2D" uid="uid://ce4pstyb2a81e" path="res://assets/icons/ZoomAll.svg" id="8_gavh4"]
[ext_resource type="Texture2D" uid="uid://cyu6w28aucjer" path="res://assets/icons/ZoomOut.svg" id="9_x2i44"]
[ext_resource type="Texture2D" uid="uid://dp8vkenjk120x" path="res://assets/icons/GridOff.svg" id="10_7e1ah"]
[ext_resource type="Texture2D" uid="uid://bbennjke0ioen" path="res://assets/icons/Add.svg" id="11_1axxj"]
[ext_resource type="Texture2D" uid="uid://b45woehlhukgj" path="res://assets/icons/Download.svg" id="12_wh0as"]
[ext_resource type="Texture2D" uid="uid://x6jujyxw4f8r" path="res://assets/icons/remove.svg" id="13_j5khv"]
[ext_resource type="Texture2D" uid="uid://be3tq05v1ne7n" path="res://assets/icons/Horizontal_distribute.svg" id="14_pfe5j"]
[ext_resource type="Texture2D" uid="uid://bn4jkekidjyne" path="res://assets/icons/Vertical_distribute.svg" id="15_wwye1"]
[ext_resource type="Texture2D" uid="uid://vm1u4mv102e3" path="res://assets/icons/Dot_Grid.svg" id="16_hig83"]
[ext_resource type="PackedScene" uid="uid://dfu5s8fjy0ex4" path="res://components/UIPanel/EditControls.tscn" id="17_pegoj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxspt"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.10748, 0.10748, 0.10748, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.309804, 0.309804, 0.309804, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_10tdw"]
shader = ExtResource("4_usc8a")
shader_parameter/size = Vector2(3840, 2160)
shader_parameter/line_width = 0.084
shader_parameter/offset = Vector2(0, 0)
shader_parameter/grid_size = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7r8u"]
bg_color = Color(0, 0.513726, 1, 0.364706)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 3
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pkwr7"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.205117, 0.205117, 0.205117, 1)
border_color = Color(0.309804, 0.309804, 0.309804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="VirtualFixtures" type="Control" node_paths=PackedStringArray("edit_controls")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_evtrr")
script = ExtResource("2_2fnn8")
edit_controls = NodePath("TitleBar/HBoxContainer/EditControls")

[node name="Table" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_qxspt")

[node name="RealScroll" type="ScrollContainer" parent="Table"]
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="ScrollSize" type="Control" parent="Table/RealScroll"]
custom_minimum_size = Vector2(3840, 2160)
layout_mode = 2

[node name="FixtureContainer" type="Control" parent="Table/RealScroll/ScrollSize" node_paths=PackedStringArray("_virtual_fixtures_root")]
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_7v2kg")
_virtual_fixtures_root = NodePath("../../../..")

[node name="Grid" type="ColorRect" parent="Table/RealScroll/ScrollSize/FixtureContainer"]
material = SubResource("ShaderMaterial_10tdw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
color = Color(0.0728426, 0.0728427, 0.0728425, 1)

[node name="SelectBox" type="PanelContainer" parent="Table/RealScroll/ScrollSize/FixtureContainer"]
visible = false
layout_mode = 0
offset_right = 267.0
offset_bottom = 257.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a7r8u")

[node name="TitleBar" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
anchor_right = 1.0
offset_left = 6.0
offset_top = 5.0
offset_right = -6.0
offset_bottom = 64.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("5_11uun")

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar"]
layout_mode = 2

[node name="FixtureGroupName" type="Button" parent="TitleBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Fixture Group"
icon = ExtResource("6_n07cw")
flat = true

[node name="Zoom Controls" type="PanelContainer" parent="TitleBar/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar/HBoxContainer/Zoom Controls"]
layout_mode = 2

[node name="ZoomIn" type="Button" parent="TitleBar/HBoxContainer/Zoom Controls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Zoom In"
icon = ExtResource("7_llnj3")

[node name="ZoomAll" type="Button" parent="TitleBar/HBoxContainer/Zoom Controls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Center Zoom"
icon = ExtResource("8_gavh4")

[node name="ZoomOut" type="Button" parent="TitleBar/HBoxContainer/Zoom Controls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Zoom Out"
icon = ExtResource("9_x2i44")

[node name="VSeparator" type="VSeparator" parent="TitleBar/HBoxContainer"]
visible = false
layout_mode = 2

[node name="GridControls" type="PanelContainer" parent="TitleBar/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar/HBoxContainer/GridControls"]
layout_mode = 2

[node name="ShowGrid" type="Button" parent="TitleBar/HBoxContainer/GridControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Toggle Grid"
toggle_mode = true
icon = ExtResource("10_7e1ah")

[node name="GridSize" type="SpinBox" parent="TitleBar/HBoxContainer/GridControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Snapping Distance"
value = 20.0

[node name="VSeparator2" type="VSeparator" parent="TitleBar/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="TitleBar/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="AddFixtures" type="Button" parent="TitleBar/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Add Fixtures"
icon = ExtResource("11_1axxj")

[node name="Import" type="Button" parent="TitleBar/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Import Selected Fixtures"
disabled = true
icon = ExtResource("12_wh0as")

[node name="RemoveFixtures" type="Button" parent="TitleBar/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Remove Selected Fixtures"
disabled = true
icon = ExtResource("13_j5khv")

[node name="VSeparator3" type="VSeparator" parent="TitleBar/HBoxContainer"]
layout_mode = 2

[node name="AlignControls" type="PanelContainer" parent="TitleBar/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar/HBoxContainer/AlignControls"]
layout_mode = 2

[node name="HorizontalAlign" type="Button" parent="TitleBar/HBoxContainer/AlignControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Horizontal Align Selection"
disabled = true
icon = ExtResource("14_pfe5j")

[node name="VerticalAlign" type="Button" parent="TitleBar/HBoxContainer/AlignControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Vertical Align Selection"
disabled = true
icon = ExtResource("15_wwye1")

[node name="GridAlign" type="Button" parent="TitleBar/HBoxContainer/AlignControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Grid Align Selection"
disabled = true
icon = ExtResource("16_hig83")

[node name="EditControls" parent="TitleBar/HBoxContainer" instance=ExtResource("17_pegoj")]
layout_mode = 2
size_flags_horizontal = 10

[node name="DummyScroll" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 80.0
offset_right = -11.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScrollSize" type="Control" parent="DummyScroll"]
custom_minimum_size = Vector2(3840, 2160)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="GridAlignSize" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -104.0
offset_top = 69.0
offset_right = 104.0
offset_bottom = 118.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pkwr7")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="HBoxContainer" parent="GridAlignSize"]
layout_mode = 2

[node name="Label3" type="Label" parent="GridAlignSize/VBoxContainer"]
layout_mode = 2
text = "Grid Width:"

[node name="GridWidth" type="SpinBox" parent="GridAlignSize/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
min_value = 1.0
max_value = 9.22337e+18
value = 1.0
update_on_text_changed = true

[connection signal="gui_input" from="Table/RealScroll/ScrollSize/FixtureContainer" to="." method="_on_fixture_container_gui_input"]
[connection signal="gui_input" from="Table/RealScroll/ScrollSize/FixtureContainer" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_gui_input"]
[connection signal="pressed" from="TitleBar/HBoxContainer/FixtureGroupName" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_fixture_group_name_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/Zoom Controls/HBoxContainer/ZoomIn" to="." method="_on_zoom_in_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/Zoom Controls/HBoxContainer/ZoomOut" to="." method="_on_zoom_out_pressed"]
[connection signal="toggled" from="TitleBar/HBoxContainer/GridControls/HBoxContainer/ShowGrid" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_show_grid_toggled"]
[connection signal="value_changed" from="TitleBar/HBoxContainer/GridControls/HBoxContainer/GridSize" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_grid_size_value_changed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/PanelContainer/HBoxContainer/AddFixtures" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_add_fixtures_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/PanelContainer/HBoxContainer/Import" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_import_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/AlignControls/HBoxContainer/HorizontalAlign" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_horizontal_align_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/AlignControls/HBoxContainer/VerticalAlign" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_vertical_align_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/AlignControls/HBoxContainer/GridAlign" to="." method="_on_grid_align_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/AlignControls/HBoxContainer/GridAlign" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_grid_align_pressed"]
[connection signal="value_changed" from="GridAlignSize/VBoxContainer/GridWidth" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_grid_width_value_changed"]
